Switched from `newVirtualThreadPerTaskExecutor` to `newCachedThreadPool` across connection and consumer state store classes. Updated event sequence number handling in `EventStore` by decoupling retrieval from the insert query.